# aetheris-vision-website

./: .env.example  ATBD.md  BUSINESS_SYSTEM_DOCUMENTATION.md  CLAUDE_VERCEL_INTEGRATION.md  CLIENT_INTAKE_TEMPLATE.md  GIT_VERCEL_MCP_COMPLETE.md  HOW_TO_BUILD_FROM_SCRATCH.md  INTAKE_USAGE_GUIDE.md  PRICING_GUIDE.md  README.md  SECURITY_IMPLEMENTATION_PLAN.md  SECURITY_STATUS.md  VERCEL_MCP_READY.md  VERCEL_MCP_USAGE.md  WEBSITE_MANUAL.md  configure-claude-vercel.sh  configure-vercel-token.sh  debug_build.js  next.config.js  next.config.ts  package-lock.json  package.json  push-with-vercel.sh  setup-git-vercel-mcp.sh  setup-vercel-mcp.sh  test-claude-vercel.sh  test-git-vercel-mcp.sh  vitest.config.ts
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/copilot-instructions/: instructions.md
.github/workflows/: ci.yml  vercel-monitor.yml
mcp/: README.md  __init__.py  claude-mcp-config.json  git-vercel-mcp.py  pyproject.toml  vercel-server.py
public/: manifest.json
scripts/: check-env.js  vercel.py
src/: middleware.ts  proxy.ts
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: ArticleRenderer.tsx  BackToTop.tsx  BlogClientPage.tsx  BlogComments.tsx  BlogSubscribeCard.tsx  CalBooking.tsx  ChatWidget.tsx  ContactForm.tsx  CtaButton.tsx  FadeIn.tsx  Footer.tsx  HeroGlobe.tsx  HeroVideo.tsx  Navbar.tsx  PortfolioImage.tsx  ProjectIntakeForm.tsx  RotatingEarth.tsx  SatelliteDisplay.tsx
src/lib/: auth-adapter.ts  auth.ts  (+11 more)
tests/: setup.ts
(+94 files in other folders)
