[project]
name = "vercel-mcp-server"
version = "1.0.0" 
description = "MCP server for Vercel deployment monitoring"
authors = ["Marston Ward <marston@aetherisvision.com>"]
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0", 
    "mcp>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vercel_mcp"]

[project.scripts]
vercel-mcp-server = "vercel_mcp.server:main"